test/scc/decl/semantic-errors/065.a
065.t:1:19: error: incomplete type is not allowed